--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -570,6 +570,7 @@ which results in the final expression to be evaluated
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Analytic evaluation of $G_0G_0$}
+\label{sec:analytic_g0g0}
 When evaluation the bare susceptibility/polarization
 \begin{align}
  P(1,2) = -G_0(1,2)G_0(2,1),
@@ -622,6 +623,8 @@ This applies not only to the $\Gamma$-point, but analogously to all k-points wit
 where $\epsilon_k=\epsilon_{k-q}$.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Real-frequency evaluation of Matsubara - convolutions}
 \subsection{Fermionic x Bosonic}
@@ -632,8 +635,8 @@ We want to evaluate equations of the form
 where $B$ is a bosonic function, $G_0$ a fermionic function, and $i\omega_n$ fermionic, 
 and $i\nu_n$ bosonic frequencies. We cannot immediately perform 
 analytic continuation with $i\omega_n \rightarrow \omega + i\delta$,
-because the poles of $G_0( z - i\nu_n)$ would be located in the complex plane
-and not on the real axis.
+because the poles of $G_0( z - i\nu_n)$ are shifted into the complex plane by $i\nu_n$
+and thus are not located on the real axis.
 
 But we can safely generate $G_0(i\omega_n - i\nu_n)$ and $B$ from the standard analytic
 continuation formula from Cauchy's integral equation 
@@ -642,8 +645,8 @@ continuation formula from Cauchy's integral equation
 \end{align}
 because $i\omega_n - i\nu_n \neq 0$ for all $n$, so we never evaluate the poles on the real axis.
 On the other hand, we can do the same for $B$ only for $i\nu_n \neq 0$ since a bosonic function usually
-has discontinuos poles on the real axis coming from above/below.
-Therefore, we separate the convolution
+has a discontinuos pole (Drude peak) on the real axis at $i\nu_n = 0$.
+Therefore, we separate the convolution into the normal part and Drude peak part
 \begin{align}
  F(i\omega_n)  &= \frac{1}{\beta} \sum_{i\nu_n\neq 0} B(i\nu_n) G_0(i\omega_n - i\nu_n) 
                    + \frac{1}{\beta} B(0) G_0(i\omega_n) \\
@@ -667,7 +670,7 @@ Therefore, we separate the convolution
 %
 \end{align}
 In this form $\mathrm{Im}B(x)$ always means the retarded part, i.e. $\mathrm{Im}B(x+i\delta)$.
-Therefore, $B(i\delta) \neq B(0)$, since $B$ can have a delta-like peak at the origin.
+Therefore, $B(i\delta) \neq B(0)$, since $B$ has a delta-like Drude peak at the origin.
 This leads to
 \begin{align}
  F(i\omega_n)
@@ -675,8 +678,8 @@ This leads to
   -\frac{1}{\pi} \int B(i\omega_n-y) \mathrm{Im}G_0(y)n_B(i\omega_n-y) \mathrm{d}y \nonumber \\
 & \hspace{1cm} - \frac{1}{\beta} B(i\delta)G_0(i\omega_n) +  \frac{1}{\beta} B(0) G_0(i\omega_n).
 \end{align}
-We still cannot do $i\omega_n \rightarrow \omega + i\delta$ since $n_B(i\omega_n-y)$
-has poles in the complex plane. But we can evaluate it first
+We still cannot do $i\omega_n \rightarrow \omega + i\delta$ since $n_B(z-y)$
+has poles in the complex plane (at $z=i\nu_n+y$). But we can evaluate it first
 \begin{align}
  n_B(i\omega_n-y) &= \frac{1}{\mathrm{e}^{\beta(i\omega_n-y)} - 1 } \\
  &= \frac{1}{-\mathrm{e}^{-\beta y} - 1 } \\
@@ -689,7 +692,8 @@ leading to
   +\frac{1}{\pi} \int \frac{B(i\omega_n-y) \mathrm{Im}G_0(y) }{\mathrm{e}^{-\beta y} + 1 } \mathrm{d}y \nonumber \\
 & \hspace{1cm} + \frac{1}{\beta} G_0(i\omega_n) \left( B(0) - B(i\delta) \right).
 \end{align}
-In this form all poles are on the real axis and we can safely evaluate on the real axis.
+In this form all poles are on the real axis and we can safely perform analytic continuation
+ with $i\omega_n \rightarrow \omega + i\delta$.
 Performing a substitution of variables in the second term we get for the final result
 \begin{align}
  F(\omega)
@@ -697,14 +701,15 @@ Performing a substitution of variables in the second term we get for the final r
   +\frac{1}{\pi} \int \frac{B(x) \mathrm{Im}G_0(\omega - x) }{\mathrm{e}^{-\beta (\omega - x)} + 1 } \mathrm{d}x \nonumber \\
 & \hspace{1cm} + \frac{1}{\beta} G_0(\omega) \left( B(0) - B(i\delta) \right).
 \end{align}
-It is important to note that the delta-peak in $B(x)$ at $x=0$ does not enter the integral
-in the first two terms, because we evaluate $B$ slightly above the real axis $B(x+i\delta)$.
+It is important to note that the delta-peak in $\mathrm{Re}B(x)$ at $x=0$ does not enter the integral
+in the second term, because we evaluate $B$ slightly above the real axis $B(x+i\delta)$.
+Numerically one needs to integrate $B(x+i\delta)$ and not $B(x)$.
 
 If we only want the spectral function of $F$, we can simplify the expression to
 \begin{align}
  -\frac{1}{\pi}\mathrm{Im}F(\omega)
  &=\frac{1}{\pi} \int \frac{\mathrm{Im}B(x) A_0(\omega - x)}{ \mathrm{e}^{\beta x} - 1 } \mathrm{d}x 
-  +\frac{1}{\pi} \int \mathrm{Im}\frac{B(x) A_0(\omega - x) }{\mathrm{e}^{-\beta (\omega - x)} + 1 } \mathrm{d}x \nonumber \\
+  +\frac{1}{\pi} \int \frac{\mathrm{Im}B(x) A_0(\omega - x) }{\mathrm{e}^{-\beta (\omega - x)} + 1 } \mathrm{d}x \nonumber \\
 & \hspace{1cm} + \frac{1}{\beta} A_0(\omega) \mathrm{Re}\left[ B(0) - B(i\delta) \right] \\
 %
 &=\frac{1}{\pi} \int \mathrm{Im}B(x) A_0(\omega - x)\frac{ \mathrm{e}^{-\beta (\omega-x)} + \mathrm{e}^{\beta x}  }{\left( \mathrm{e}^{\beta x} - 1\right)\left(\mathrm{e}^{-\beta (\omega - x)} + 1 \right) } \mathrm{d}x  \nonumber \\
@@ -713,10 +718,81 @@ If we only want the spectral function of $F$, we can simplify the expression to
 &=\frac{1}{\pi} \int \mathrm{Im}B(x) A_0(\omega - x)\frac{ \mathrm{e}^{-\beta \omega} + 1  }{\left( 1-\mathrm{e}^{-\beta x} \right)\left(\mathrm{e}^{-\beta (\omega - x)} + 1 \right) } \mathrm{d}x  \nonumber \\
 & \hspace{1cm} + \frac{1}{\beta} A_0(\omega) \mathrm{Re}\left[ B(0) - B(i\delta) \right] ,
 \end{align}
-where $A_0= -\frac{1}{\pi} \mathrm{Im}G_0$.
+where $A_0= -\frac{1}{\pi} \mathrm{Im}G_0$. This is the correct form of Eq.(12) in 
+Nature Physics 8, 331–337 (2012) and Eq.(12) in  J.Phys.Condens.Mat. 26, 173202 (2014).
 
 \subsection{Fermionic x Fermionic}
+We want to evaluate equations of the form
+\begin{align}
+B(i\nu_n)  &= \frac{1}{\beta} \sum_{i\omega_n} F(i\omega_n) G_0(i\omega_n - i\nu_n)
+\end{align}
+where $B$ is a bosonic function, $F, G_0$ a fermionic functions, and $i\omega_n$ fermionic, 
+and $i\nu_n$ bosonic frequencies. We again cannot immediately perform 
+analytic continuation with $i\nu_n \rightarrow \omega + i\delta$,
+because the poles of $G_0( z - i\nu_n)$ are shifted into the complex plane by $i\nu_n$
+and thus are not located on the real axis.
 
+This derivation holds in principle for all frequencies, even at $i\nu_n = \omega = 0$,
+if $F$ and $G_0$ are continuous functions.
+If they are not, for example a non-interacting Green's function which is only a pole 
+(or sum of discrete poles), the $i\nu_n = \omega = 0$ (Drude peak) case can and needs to be done analytically
+(see previous chapter \ref{sec:analytic_g0g0}).
+When using $\frac{1}{\omega + i\delta}$, the function is continuous and the Drude
+peak will naturally appear without special treatment, but it will be broadened, and one 
+needs a high frequency resolution for the integration depending on $\delta$.
+
+Using the Cauchy theorem as above we get
+\begin{align}
+B(i\nu_n)  
+&= \frac{1}{\beta \pi^2}\sum_{i\omega_n} \int\int 
+          \frac{\mathrm{Im}F(x)  }{x -  i\omega_n          }
+          \frac{\mathrm{Im}G_0(y)}{y - (i\omega_n - i\nu_n)} \, \mathrm{d}x\mathrm{d}y \\
+%
+&= \frac{1}{\beta \pi^2} \int\int \mathrm{Im}F(x)\mathrm{Im}G_0(y) 
+    \sum_{i\omega_n} \frac{1}{i\omega_n - x }
+                     \frac{1}{i\omega_n - (y+i\nu_n)} \, \mathrm{d}x\mathrm{d}y \\
+%                     
+&= \frac{1}{\pi^2} \int\int \mathrm{Im}F(x)\mathrm{Im}G_0(y) 
+    \frac{n_F(x)-n_F(y+i\nu_n)}{x-(y+i\nu_n)} \, \mathrm{d}x\mathrm{d}y \\
+%
+&= \frac{1}{\pi^2} \int\int \left[
+     \frac{ \mathrm{Im}G_0(y) }{x-(y+i\nu_n)} \mathrm{Im}F(x) n_F(x)
+    -\frac{ \mathrm{Im}F(x) }{x-(y+i\nu_n)} \mathrm{Im}G_0(y)n_F(y+i\nu_n)
+    \right]\, \mathrm{d}x\mathrm{d}y \\
+%
+&= -\frac{1}{\pi} \int G_0(x-i\nu_n) \mathrm{Im}F(x) n_F(x) \, \mathrm{d}x
+   -\frac{1}{\pi} \int F(y+i\nu_n)  \mathrm{Im}G_0(y)n_F(y+i\nu_n) \, \mathrm{d}y .
+%
+\end{align}
+Again we evaluate first
+\begin{align}
+ n_F(y+i\nu_n) &= \frac{1}{1 + \mathrm{e}^{\beta(y+i\nu_n)} } \\
+ &=\frac{1}{1 + \mathrm{e}^{\beta y} \mathrm{e}^{i \beta \nu_n} } \\
+ &=\frac{1}{1 + \mathrm{e}^{\beta y } } \\
+ &= n_F(y)
+\end{align}
+This leads to 
+\begin{align}
+P(i\nu_n)
+ &= -\frac{1}{\pi} \int G_0(x-i\nu_n) \mathrm{Im}F(x) n_F(x) \, \mathrm{d}x
+   -\frac{1}{\pi} \int F(y+i\nu_n)  \mathrm{Im}G_0(y)n_F(y) \, \mathrm{d}y ,
+\end{align}
+which can safely be continued to the real axis
+\begin{align}
+P(\omega)
+ &= -\frac{1}{\pi} \int G_0(x-\omega) \mathrm{Im}F(x) n_F(x) \, \mathrm{d}x
+   -\frac{1}{\pi} \int F(y+\omega)  \mathrm{Im}G_0(y)n_F(y) \, \mathrm{d}y .
+\end{align}
+A substitution of variables in the second term leads to
+\begin{align}
+P(\omega)
+ &= -\frac{1}{\pi} \int \frac{\mathrm{Im}F(x) G_0(x-\omega) }{1+\mathrm{e}^{\beta x}} \, \mathrm{d}x
+   -\frac{1}{\pi} \int \frac{ F(x)  \mathrm{Im}G_0(x-\omega) }{1+\mathrm{e}^{\beta (x-\omega)}} \, \mathrm{d}x .
+\end{align}
+\clearpage 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Multi-site DCA}
